[package]
name = "gitpeek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
config = "0.13.3"
dialoguer = { version ="0.10.3", features = ["fuzzy-select"] }
pico-args = "0.5.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
